update addhabit page,habitcard

--- a/manifest.json
+++ b/manifest.json
@@ -15,9 +15,9 @@
       "type": "image/png"
     },
     {
-      "src": "/assets/IMG_20251005_140119.png",
+      "src": "/assets/IMG_20251005_140119.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ]
 }
