--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Habitat",
   "short_name": "Habitat",
-  "description": "A habit and to-do tracking app",
+  "description": "A habit tracking and to-do app",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
@@ -10,14 +10,14 @@
   "theme_color": "#000",
   "icons": [
     {
-      "src": "/assets/IMG_20251005_140119.png",
+      "src": "/assets/IMG_20251005_140119.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
       "src": "/assets/IMG_20251005_140119.jpg",
       "sizes": "512x512",
-      "type": "image/jpg"
+      "type": "image/jpeg"
     }
   ]
 }
